# ChangeLog for net-im/kadu-globalhotkeys
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.5_p14.ebuild:
  Fixed copyright.

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Bumped with patch to fix build error with _rc2.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.5_p13.ebuild:
  Added explicit dep for kadu-core-0.6.5.4.

  17 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-globalhotkeys-0.6.5_p7.ebuild, -kadu-globalhotkeys-0.6.5_p8.ebuild,
  -kadu-globalhotkeys-0.6.5_p9.ebuild:
  Removed some cruft.

  11 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p13.ebuild:
  Bumped.

  04 Oct 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-globalhotkeys-0.6.0_p7.ebuild:
  Removing Kadu 0.6.0.* ebuilds.

  14 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p12.ebuild:
  Bumped.

  03 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p9.ebuild:
  Bumped.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p8.ebuild:
  Bumped.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.0_p1.ebuild, kadu-globalhotkeys-0.6.0_p3.ebuild,
  kadu-globalhotkeys-0.6.0_p7.ebuild, -kadu-globalhotkeys-0.6.5_p6.ebuild,
  kadu-globalhotkeys-0.6.5_p7.ebuild, +metadata.xml:
  Some repoman fixes.

  18 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.0_p7.ebuild:
  Bumped.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.5_p7.ebuild:
  Bumped.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  kadu-globalhotkeys-0.6.0_p3.ebuild:
  Stabled.

  18 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.0_p3.ebuild:
  Bumped.

  07 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-globalhotkeys-0.6.0_p1.ebuild:
  Initial ebuild. Will bump to _p2 once Kadu 0.6.0.2 is released.
