@@ -1,4 +1,4 @@
-AUX silentmode-api-fix.patch 1338 RMD160 72d531e8bfd67f506dfb168f2af8eb3a29e657d7 SHA1 8f6b56633f0a7c8220ab8f9a2fe4bafe6d760318 SHA256 7ab770f82d9af76bb0d120bb2d80f1e38213c5c5e202f004ea943a9ef9cef885
+AUX silentmode-api-fix.patch 1125 RMD160 a7f78cc4019104d69578c2f64f85a2da49c49f7f SHA1 0bcf369734dfad137bc2c029e82b1199ddea8abe SHA256 f39eea14ada51314134ca0824c4d882963ed7c6d939b2d95a016a73922db2df4
 DIST globalhotkeys-0.6.5-12.tar.gz 21127 RMD160 a0d8d2c95b26f0bde2ddadc1d3b48bf40c3ea360 SHA1 6162c5dfff9904d68a6dc56d51ac3729ee2ba3b7 SHA256 8a5586ca625623bfa37022f9d34ddc972c014e60ac11f284560ed72ce4a03465
 DIST globalhotkeys-0.6.5-13.tar.gz 21623 RMD160 5ce5f2942ea38a9fdbdf2b463ccca8b6abfc44b9 SHA1 0b639cf86823c8716647848e2e4034b0914efd3f SHA256 2778379c3bc936e982c4d1002412124cb922fdd02965c9bae8f46f123cbe983b
 DIST globalhotkeys-0.6.5-14.tar.gz 22074 RMD160 fdf957b5949973003a78a0545ea8656f94d3c24c SHA1 e9129c63737ef3efc9d9468f4d1c79461a8c97a4 SHA256 f816d3b896b6500c8ba3c535e0f6af1c426992bd1ed4e76c510e40f485748200
@@ -8,5 +8,5 @@ DIST kadu-0.6.5.4-rc2.tar.bz2 1764699 RMD160 da10c176ec0ee96986210183a43ede40c99
 EBUILD kadu-globalhotkeys-0.6.5_p12.ebuild 344 RMD160 7f38a4d6359825f9995163e709158b79388930ce SHA1 7a49d2fe3489d0619410964d0eab3a5c527a8d34 SHA256 3b83c46e16ebcc54ae65f88b0d3e34d4791e4d8bdd0e3142293904a7a08f0f54
 EBUILD kadu-globalhotkeys-0.6.5_p13.ebuild 369 RMD160 69bd0ff49abb5cd858a89987065b8862ee1d8619 SHA1 01261a208623adabbe56f87267d5f7100b7c004e SHA256 0adedf47344a8b51dece028ac3e804f4c0168a729f3e315d1598614e82ab9ef8
 EBUILD kadu-globalhotkeys-0.6.5_p14.ebuild 408 RMD160 ec8e24285d0892e93022334a2b346ad36e37fee9 SHA1 9844b3b355d3b1444cedc70aa3153c1fd092f6ac SHA256 2d2363432c48c7aae73cfd65cb6b4bb1c84415f191edeefecc5a7f9199d80b48
-MISC ChangeLog 2009 RMD160 79de0881d5153ea3293ebe3ec8768a7c593966a8 SHA1 09628d0109201b46125be60eaa88ce2b73fc512d SHA256 3124d4b7fe6dffae09167265fcc0739ac3e97093d4456b65d020cb9462f0a461
+MISC ChangeLog 2136 RMD160 af2b3f135725a152e3f01b20a637532a3a520b0f SHA1 9e7183a8d14ecf4887ad75ccca619cde960c560c SHA256 b8c57a17ee5891bf332af322c6928be6f3005fafc3768606ec773949502bc339
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
